--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,407 @@
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing:border-box;
+}
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+.work-sans-font{
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:400;
+  font-style:normal;
+}
+
 body{
-    background-color: brown;
+width:1600px;
+height:4307px;
+}
+
+header{
+  background-color:#1A0B2E;
+}
+.navbar{
+  height:92px;
+  display:flex;
+  position:relative;
+  flex-direction:row;
+  justify-content:space-between;
+  align-items:center;
+  border:1px solid rgba(65, 37, 103, 1);
+  box-shadow:0 0 0 0;
+  padding:16px 200px;
+}
+.nav-logo img{
+  width:219px ;
+  height:32px;
+}
+
+.navbar .nav-links{
+  width:218px;
+  height:19px;
+  list-style:none;
+  display:flex;
+  justify-content:flex-start;
+  align-items:center;
+  gap:32px;
+
+}
+
+.navbar .nav-link{
+text-decoration:none;
+color:#FFFFFF;
+font-style:Medium;
+font-size:16px;
+font-weight:500;
+line-height:120%;
+letter-spacing:0%;
+text-align:left;
+text-transform:capitalize;
+}
+
+.text-1{
+width:47px;
+height:19px;
+}
+.text-2{
+width:70px;
+height:19px;
+}
+.text-3{
+width:37px;
+height:19px;
+}
+.primary-btn{
+width:135px;
+height:44px;
+display:flex;
+flex-direction:row;
+justify-content:center;
+align-items:center;
+gap:4px;
+padding:12px 16px 12px 16px;
+border-radius:10000px;
+background:var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),
+rgba(145, 0, 248, 1)));
+border:none;
+}
+.text-4{
+width:79px;
+height:19px;
+color:white;
+font-style:Semi Bold;
+font-size:16px;
+font-weight:600;
+line-height:19px;
+text-align:left;
+text-transform:capitalize;
+}
+.icons{
+  width:20px;
+  height:20px;
+}
+.banner{
+width:100%;
+height:760px;
+background:url(../assets/hero-bg.png);
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+gap:24px;
+}
+
+.middle-img{
+  width:350px;
+  height:350px;
+}
+.circle-wrap{
+  position: relative;
+}
+.inner-img{
+position:absolute;
+top:50%;
+left:50%;
+transform: translate(-50%, -50%);
+}
+
+.top-btn{
+width:75px;
+height:38px;
+display:flex;
+flex-direction:row;
+justify-content:center;
+align-items:center;
+gap:10px;
+padding:8px 16px 8px 16px;
+border-radius:1000px;
+box-shadow:0px 3px 27px 0px rgba(0, 255, 136, 0.5);
+background:#00FF88;
+}
+.new{
+width:43px;
+height:22px;
+color:#1A0B2E;
+font-style:Semi Bold;
+font-size:18px;
+font-weight:600;
+line-height:22px;
+letter-spacing:0%;
+text-align:left;
+text-transform:capitalize;
+}
+.banner-box h1{
+width:550px;
+height:73px;
+color: rgba(255, 255, 255, 1);
+font-style: Extra Bold;
+font-size:60px;
+font-weight:800;
+line-height:73px;
+letter-spacing:0%;
+text-align:center;
+text-transform:capitalize;
+
+}
+.banner-box p{
+  width: 550px;
+  height: 19px;
+  color:rgba(255, 255, 255, 1);
+  font-style:Regular;
+  font-size:16px;
+  font-weight:400px;
+  line-height:19px;
+  text-align:center;
+  margin-top:8px;
+}
+.banner-buttons{
+  height:44px;
+  display:flex;
+  justify-content:center;
+  gap:8px;
+}
+
+.btn-primary{
+width:201px;
+display:flex;
+flex-direction:row;
+justify-content:center;
+align-items:center;
+gap:8px;
+padding:12px 20px 12px 20px;
+box-sizing:border-box;
+border:none;
+border-radius:10000px;
+background:var(--Linear, linear-gradient(47.64deg, rgba(247, 233, 63, 1),rgba(251, 9, 180, 1),rgba(145, 0, 248, 1)));
+}
+.btn-primary img{
+  height:20px;
+  width:20px;
+  color:#FFFFFF;
+}
+
+.btn-secondary{
+width:147px;
+display:flex;
+flex-direction:row;
+justify-content:center;
+align-items:center;
+gap:8px;
+padding: 12px 20px 12px 20px;
+box-sizing:border-box;
+border:1px solid #00FF88;
+border-radius:10000px;
+ background:transparent;
+}
+
+.btn-secondary img{
+  height:20px;
+  width:20px;
+  color:#00FF88;
+}
+.btn-text1 {
+width:133px;
+height:19px;
+color:#FFFFFF;
+font-style:Semi Bold;
+font-size:16px;
+font-weight:600;
+line-height:19px;
+letter-spacing:0%;
+text-align:left;
+text-transform:capitalize;
+}
+
+.btn-text2{
+width:79px;
+height:19px;
+color:#00ff88;
+font-style:Semi Bold;
+font-size:16px;
+font-weight:600;
+line-height:19px;
+letter-spacing:0%;
+text-align:left;
+text-transform:capitalize;
+}
+
+.about{
+width:100%;
+height:646px;
+background:rgba(26, 11, 46, 1);
+}
+.about-container {
+width:1200px;
+height:222px;
+display:flex;
+flex-direction:column;
+justify-content:flex-start;
+align-items:flex-start;
+gap:16px;
+padding:50px 200px 120px 200px;
+
+}
+.about-container h1{
+height:58px;
+width:1200px;
+color: #FFFFFF;
+font-size: 48px;
+font-weight: 700;
+font-style:bold;
+text-align:center;
+line-height:58px;
+gap:16px;
+}
+
+.about-container p{
+width:1200px;
+height:148px;
+color:#FFFFFF;
+font-style:Regular;
+font-size:16px;
+font-weight:400;
+line-height:20px;
+letter-spacing:0%;
+text-align:center;
+}
+
+.about-section{
+width:100%;
+height:94px;
+display:flex;
+flex-direction:row;
+justify-content:center;
+align-items:center;
+margin-top:180px;
+}
+.box-1{
+width:240px;
+height:94px;
+display:flex;
+flex-direction:column;
+justify-content:flex-start;
+align-items:flex-start;
+gap:16px;
+}
+.about-section h1{
+width:240px;
+height:58px;
+color:#00FF88;
+font-size:48px;
+font-weight:900;
+line-height:58px;
+letter-spacing:0%;
+text-align:center;
+text-transform:capitalize;
+}
+
+.about-section p{
+width: 240px;
+height: 20px;
+color:#FFFFFF;
+font-style:Regular;
+font-size:16px;
+font-weight:400;
+line-height:20px;
+letter-spacing:0%;
+text-align:center;
+text-transform:uppercase;
+}
+
+.Choose{
+width:100%;
+height:1121px;
+background:rgba(35, 14, 61, 1);
+
+}
+
+.choose-container{
+display:grid;
+justify-content:center;
+align-items:center;
+gap:40px;
+padding:120px 200px 120px 200px;
+}
+
+.choose-container h1{
+width:1200px;
+height:58px;
+color:#FFFFFF;
+font-style: Bold;
+font-size:48px;
+font-weight:700;
+line-height:58px;
+text-align:center;
+text-transform:capitalize;
+}
+
+.box-2{
+width:380px;
+height:480px;
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+gap:16px;
+padding:40px;
+border-radius:40px;
+background:rgba(53, 17, 101, 0.4);
+}
+.icon{
+width:60px;
+height:60px;
+}
+.box-2 h1{
+width: 300px;
+height: 29px;
+color:#FFFFFF;
+font-style:Bold;
+font-size:24px;
+font-weight:700;
+line-height:29px;
+text-align:left;
+text-transform:capitalize;
+}
+.box-2 p{
+width:300px;
+height:144px;
+color:#FFFFFF;
+font-style:Regular;
+font-size:16px;
+font-weight:400;
+line-height:24px;
+text-align:left;
+}
+.feature{
+width:100%;
+height:1276px;
+background:rgba(26, 11, 46, 1);
+}
+.feature-container{
+display:flex;
+flex-direction:column;
+justify-content:flex-start;
+align-items:center;
+gap:120;
+padding:120px 200px 120px 200px;
 }
