--- a/styles/style.css
+++ b/styles/style.css
@@ -336,13 +336,11 @@ background:rgba(35, 14, 61, 1);
 }
 
 .choose-container{
-display:grid;
-justify-content:center;
-align-items:center;
+display:grid;   
+grid-template-columns:repeat(6, 1fr);
+grid-template-rows:250px 250px 250px;
 gap:40px;
-padding:120px 200px 120px 200px;
 }
-
 .choose-container h1{
 width:1200px;
 height:58px;
@@ -393,15 +391,116 @@ line-height:24px;
 text-align:left;
 }
 .feature{
-width:100%;
-height:1276px;
-background:rgba(26, 11, 46, 1);
+background: rgba(26, 11, 46, 1);
 }
 .feature-container{
+color:#FFFFFF;
+font-style:Bold;
+font-size:48px;
+font-weight:700;
+line-height:58px;
+text-align:center;
+text-transform:capitalize;
+}
+
+.container{
+gap:12px;
+padding:24px;
+}
+/* .feature-container{
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+gap:40px;
+padding:120px 200px 120px 200px;
+} */
+
+.card{
+width:332px;
+height:58px;
+color:#FFFFFF;
+font-style:bold;
+font-size:24px;
+font-weight:700;
+line-height:29px;
+text-align:left;
+}
+
+.card h1{
+width:332px;
+height:58px;
+color:#FFFFFF;
+font-style:Bold;
+font-size:24px;
+font-weight:700;
+line-height:29px;
+text-align:left;
+}
+
+.card p{
+width:332px;
+height:72px;
+color:#FFFFFF;
+font-style:Regular;
+font-size:16px;
+font-weight:400;
+line-height:24px;
+text-align:left;
+}
+footer{
+width:100%;
+height:412px;
+background:url(../assets/footer-bg.png);
+}
+.footer-container{
+width: 1360px;
+height: 172px;
 display:flex;
 flex-direction:column;
 justify-content:flex-start;
 align-items:center;
-gap:120;
-padding:120px 200px 120px 200px;
+padding: 120px;
+}
+.footer-logo{
+width:410px;
+height:60px;
+
+}
+.footer-img{
+width:544px;
+height:24px;
+display:flex;
+flex-direction:row;
+justify-content:flex-start;
+align-items:flex-start;
+}
+.footer-icons{
+width:544px;
+height:24px;
+display: flex;
+flex-direction:row;
+justify-content:flex-start;
+align-items:flex-start;
+margin-top:40px;
+
+}
+.tes{
+display: flex;
+flex-direction: row;
+justify-content:flex-start;
+align-items:flex-start;
+gap:40px;
+color: #FFFFFF;
+}
+.footer-text{
+width:1360px;
+height:24px;
+color:rgba(250, 250, 250, 1);
+font-style:Regular;
+font-size:16px;
+font-weight:400;
+line-height:24px;
+text-align:center;
+margin-top: 120px;
 }
