--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ height:4307px;
 
 header{
   background-color:#1A0B2E;
+ 
+ 
 }
 .navbar{
   height:92px;
@@ -51,7 +53,7 @@ header{
 text-decoration:none;
 color:#FFFFFF;
 font-style:Medium;
-font-size:16px;
+font-size:1rem;
 font-weight:500;
 line-height:120%;
 letter-spacing:0%;
@@ -90,7 +92,7 @@ width:79px;
 height:19px;
 color:white;
 font-style:Semi Bold;
-font-size:16px;
+font-size:1rem;
 font-weight:600;
 line-height:19px;
 text-align:left;
@@ -100,8 +102,12 @@ text-transform:capitalize;
   width:20px;
   height:20px;
 }
+.mobile-icon{
+  display:none;
+  width:30px;
+}
 .banner{
-width:100%;
+
 height:760px;
 background:url(../assets/hero-bg.png);
 display:flex;
@@ -109,14 +115,26 @@ flex-direction:column;
 justify-content:center;
 align-items:center;
 gap:24px;
+padding:101px 525px 101px 525px;
+}
+
+.banner-container{
+width:550px;
+height:558px;
+display:flex;
+flex-direction:column;
+justify-content:flex-start;
+align-items:center;
+
 }
 
 .middle-img{
   width:350px;
   height:350px;
+ 
 }
 .circle-wrap{
-  position: relative;
+  position:relative;
 }
 .inner-img{
 position:absolute;
@@ -126,6 +144,9 @@ transform: translate(-50%, -50%);
 }
 
 .top-btn{
+position: absolute;
+top:5%;
+left:70%;
 width:75px;
 height:38px;
 display:flex;
@@ -133,9 +154,10 @@ flex-direction:row;
 justify-content:center;
 align-items:center;
 gap:10px;
+border: none;
 padding:8px 16px 8px 16px;
 border-radius:1000px;
-box-shadow:0px 3px 27px 0px rgba(0, 255, 136, 0.5);
+box-shadow:0px 3px 27px 0px ;
 background:#00FF88;
 }
 .new{
@@ -143,14 +165,16 @@ width:43px;
 height:22px;
 color:#1A0B2E;
 font-style:Semi Bold;
-font-size:18px;
+font-size:1.125rem;
 font-weight:600;
 line-height:22px;
 letter-spacing:0%;
 text-align:left;
-text-transform:capitalize;
+
 }
+
 .banner-box h1{
+
 width:550px;
 height:73px;
 color: rgba(255, 255, 255, 1);
@@ -158,17 +182,17 @@ font-style: Extra Bold;
 font-size:60px;
 font-weight:800;
 line-height:73px;
-letter-spacing:0%;
 text-align:center;
 text-transform:capitalize;
+margin-top:40px;
 
 }
 .banner-box p{
+
   width: 550px;
   height: 19px;
   color:rgba(255, 255, 255, 1);
-  font-style:Regular;
-  font-size:16px;
+  font-size:1rem;
   font-weight:400px;
   line-height:19px;
   text-align:center;
@@ -179,6 +203,7 @@ text-transform:capitalize;
   display:flex;
   justify-content:center;
   gap:8px;
+  margin-top:24px;
 }
 
 .btn-primary{
@@ -224,7 +249,7 @@ width:133px;
 height:19px;
 color:#FFFFFF;
 font-style:Semi Bold;
-font-size:16px;
+font-size:1rem;
 font-weight:600;
 line-height:19px;
 letter-spacing:0%;
@@ -237,7 +262,7 @@ width:79px;
 height:19px;
 color:#00ff88;
 font-style:Semi Bold;
-font-size:16px;
+font-size:1rem;
 font-weight:600;
 line-height:19px;
 letter-spacing:0%;
@@ -246,12 +271,12 @@ text-transform:capitalize;
 }
 
 .about{
-width:100%;
+
 height:646px;
 background:rgba(26, 11, 46, 1);
 }
 .about-container {
-width:1200px;
+
 height:222px;
 display:flex;
 flex-direction:column;
@@ -274,26 +299,29 @@ gap:16px;
 }
 
 .about-container p{
-width:1200px;
+width: 1200px;
 height:148px;
 color:#FFFFFF;
-font-style:Regular;
-font-size:16px;
+font-size:1rem;
 font-weight:400;
 line-height:20px;
 letter-spacing:0%;
 text-align:center;
+
 }
 
 .about-section{
-width:100%;
+  
 height:94px;
 display:flex;
 flex-direction:row;
 justify-content:center;
 align-items:center;
 margin-top:180px;
+gap:20px;
+
 }
+
 .box-1{
 width:240px;
 height:94px;
@@ -307,7 +335,7 @@ gap:16px;
 width:240px;
 height:58px;
 color:#00FF88;
-font-size:48px;
+font-size:3rem;
 font-weight:900;
 line-height:58px;
 letter-spacing:0%;
@@ -320,7 +348,7 @@ width: 240px;
 height: 20px;
 color:#FFFFFF;
 font-style:Regular;
-font-size:16px;
+font-size:1rem;
 font-weight:400;
 line-height:20px;
 letter-spacing:0%;
@@ -329,113 +357,176 @@ text-transform:uppercase;
 }
 
 .Choose{
-width:100%;
-height:1121px;
+
 background:rgba(35, 14, 61, 1);
+padding:120px 200px 120px 200px;
 
 }
-
-.choose-container{
-display:grid;   
-grid-template-columns:repeat(6, 1fr);
-grid-template-rows:250px 250px 250px;
-gap:40px;
-}
-.choose-container h1{
-width:1200px;
+.Choose-header{
 height:58px;
 color:#FFFFFF;
-font-style: Bold;
-font-size:48px;
+font-style:Bold;
+font-size:3rem;
 font-weight:700;
 line-height:58px;
-text-align:center;
-text-transform:capitalize;
+text-align: center;
+}
+.row-2{
+  grid-row:1/span 2;
+}
+.col-2{
+  grid-column:2/span 2;
+}
+.col-12{
+  grid-column:1/span 2;
+}
+.choose-container{
+display:grid;   
+grid-template-columns:repeat(3, 1fr);
+gap:30px;
+margin:0 auto;
 }
 
+
 .box-2{
-width:380px;
-height:480px;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-gap:16px;
+
 padding:40px;
 border-radius:40px;
 background:rgba(53, 17, 101, 0.4);
+margin-top:20px;
+align-items: center;
+
 }
-.icon{
-width:60px;
-height:60px;
+.im{
+  margin-top:80px;
 }
-.box-2 h1{
-width: 300px;
-height: 29px;
+.box-2 img{
+  height:60px;
+  width:60px;
+}
+
+.H1{
+width:300px;
+height:29px;
 color:#FFFFFF;
 font-style:Bold;
-font-size:24px;
+font-size:1.5rem;
 font-weight:700;
 line-height:29px;
 text-align:left;
-text-transform:capitalize;
+margin-top: 16px;
 }
-.box-2 p{
-width:300px;
-height:144px;
-color:#FFFFFF;
-font-style:Regular;
-font-size:16px;
-font-weight:400;
-line-height:24px;
-text-align:left;
-}
-.feature{
-background: rgba(26, 11, 46, 1);
-}
-.feature-container{
+.H2{
+width:710px;
+height:29px;
 color:#FFFFFF;
 font-style:Bold;
-font-size:48px;
+font-size:1.5rem;
+font-weight:700;
+line-height:29px;
+text-align:left;
+margin-top: 16px;
+}
+
+.P1{
+width:300px;
+height:144px;
+color: #FFFFFF;
+font-size:1rem;
+font-weight:400;
+line-height: 24px;
+text-align:left;
+margin-top: 16px;
+}
+.P2{
+width: 710px;
+height: 24px;
+color: #FFFFFF;
+font-size:1rem;
+font-weight:400;
+line-height: 24px;
+text-align:left;
+margin-top: 16px;
+}
+.P3{
+width: 710px;
+height: 72px;
+color: #FFFFFF;
+font-size:16px;
+font-weight:400;
+line-height: 24px;
+text-align:left;
+margin-top: 1rem;
+}
+.P4{
+width: 300px;
+height: 72px;
+color: #FFFFFF;
+font-size:1rem;
+font-weight:400;
+line-height: 24px;
+text-align:left;
+margin-top: 16px;
+}
+
+.feature{
+background: rgba(26, 11, 46, 1);
+padding: 120px 200px 120px 200px;
+
+}
+.feature-container{
+
+color:#FFFFFF;
+font-style: bold;
+font-size:3rem;
 font-weight:700;
 line-height:58px;
 text-align:center;
 text-transform:capitalize;
+margin:30px;
 }
 
 .container{
-gap:12px;
-padding:24px;
-}
-/* .feature-container{
+
 display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-gap:40px;
-padding:120px 200px 120px 200px;
-} */
+gap:30px;
+
+}
 
 .card{
-width:332px;
-height:58px;
+background-color:rgba(37, 13, 68, 1);
+border-radius:24px 24px 0px 0px;
 color:#FFFFFF;
-font-style:bold;
-font-size:24px;
+font-style: bold;
+font-size:1.5rem;
 font-weight:700;
 line-height:29px;
 text-align:left;
+margin-bottom:20px;
+overflow:hidden;
 }
-
-.card h1{
+.card-h2{
+width:380px;
+height:226px;
+display:flex;
+flex-direction:column;
+justify-content:flex-start;
+align-items:flex-start;
+border-radius:0px 0px 24px 24px;
+background:rgba(37, 13, 68, 1);
+padding:24px;
+overflow:hidden;
+}
+.card h3{
 width:332px;
 height:58px;
 color:#FFFFFF;
 font-style:Bold;
-font-size:24px;
+font-size:1.5rem;
 font-weight:700;
 line-height:29px;
 text-align:left;
+margin-bottom: 12px;
 }
 
 .card p{
@@ -443,64 +534,222 @@ width:332px;
 height:72px;
 color:#FFFFFF;
 font-style:Regular;
-font-size:16px;
+font-size:1rem;
 font-weight:400;
 line-height:24px;
 text-align:left;
+margin-bottom: 12px;
+
 }
-footer{
-width:100%;
-height:412px;
-background:url(../assets/footer-bg.png);
+.color{
+color:#00FF88;
+font-style:Semi Bold;
+font-size:1rem;
+font-weight:600;
+line-height:24px;
+text-align:left;
 }
-.footer-container{
-width: 1360px;
-height: 172px;
+.card-icon{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-bottom:12px;
+  font-size:1rem;
+}
+.meet{
+width:1200px;
+height:58px;
+color:#FFFFFF;
+font-size:3rem;
+font-weight:700;
+line-height:58px;
+text-align:center;
+text-transform:capitalize;
+margin:40px;
+}
+.meet-container{
+height:280px;
 display:flex;
-flex-direction:column;
 justify-content:flex-start;
 align-items:center;
-padding: 120px;
+gap:24px;
+border-radius:40px;
+background:rgba(53, 17, 101, 0.4);
+
 }
+.host-info{
+  color: #FFFFFF;
+  padding:15px;
+  flex-direction: column;
+}
+.Akk{
+display:flex;
+flex-direction:row;
+justify-content:flex-start;
+align-items:flex-start;
+gap:8px;
+color:#FFFFFF;
+margin-top:16px;
+}
+.ht{
+width:40px;
+height:40px;
+box-sizing:border-box;
+border:1px solid rgba(83, 60, 114, 1);
+border-radius:50%;
+ padding:10px;
+}
+
+.img{
+  height: 20px;
+  width: 20px;
+}
+.al{
+width:896px;
+height: 39px;
+color:#FFFFFF;
+font-style:Bold;
+font-size:2rem;
+font-weight:700;
+line-height:39px;
+letter-spacing:0%;
+text-align:left;
+text-transform:capitalize;
+
+}
+.host-info p{
+margin-top:16px;
+width:896px;
+height:72px;
+color:#FFFFFF;
+font-style:Regular;
+font-size:1rem;
+font-weight:400;
+line-height:24px;
+text-align:left;
+margin-top: 16px;
+}
+.host-cord img{
+  width:200px;
+  height:200px;
+}
+footer{
+
+height:412px;
+background:url(../assets/footer-bg.png);
+background-size: cover;
+background-position: center;
+display:flex;
+justify-content:center;
+align-items:center;
+
+}
+.concepts{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+ margin-top:32px;
+}
+
 .footer-logo{
 width:410px;
 height:60px;
-
 }
-.footer-img{
-width:544px;
-height:24px;
+
+.line{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:row;
+  margin-top:32px;
+  gap:40px;
+  position: relative;
+}
+.items{
 display:flex;
-flex-direction:row;
-justify-content:flex-start;
-align-items:flex-start;
+align-items:center;
+gap:10px;
+margin-bottom:12px;
+font-size:1rem;
 }
-.footer-icons{
-width:544px;
-height:24px;
-display: flex;
-flex-direction:row;
-justify-content:flex-start;
-align-items:flex-start;
-margin-top:40px;
+.icon1{
+  width:24px;
+  gap:8px;
 
 }
-.tes{
-display: flex;
-flex-direction: row;
-justify-content:flex-start;
-align-items:flex-start;
-gap:40px;
-color: #FFFFFF;
+.item{
+width:55px;
+height:19px;
+color:rgba(255, 255, 255, 1);
+font-style: Medium;
+font-size:1rem;
+font-weight:500;
+line-height:19px;
+text-align:center;
+}
+.item1{
+width:120px;
+height:19px;
+color:rgba(255, 255, 255, 1);
+font-style: Medium;
+font-size:1rem;
+font-weight:500;
+line-height:19px;
+text-align:center;
+}
+.item2{
+width:66px;
+height:19px;
+color:rgba(255, 255, 255, 1);
+font-style:Medium;
+font-size:1rem;
+font-weight:500;
+line-height:19px;
+text-align:center;
+}
+.item3{
+width:54px;
+height:19px;
+color:rgba(255, 255, 255, 1);
+font-style:Medium;
+font-size:1rem;
+font-weight:500;
+line-height:19px;
+text-align:center;
+}
+.footers{
+  width:24px;
+  height:24px;
+   gap:40px;
 }
 .footer-text{
 width:1360px;
 height:24px;
 color:rgba(250, 250, 250, 1);
-font-style:Regular;
-font-size:16px;
+font-size:1rem;
 font-weight:400;
 line-height:24px;
 text-align:center;
-margin-top: 120px;
+margin-top:32px;
+} 
+
+@media screen and (max-width:576px) {
+
+  .nav-links{
+position:absolute;
+top: 92px;
+left:0;
+width:100%;
+flex-direction:column;
+display:none;
+align-items:center;
+  }
+  .nav-links .show{
+    display: flex;
+  }
+  .menu-icon{
+    display: block
+  }
+
+  
 }
