--- a/styles/style.css
+++ b/styles/style.css
@@ -902,18 +902,19 @@ margin-top:32px;
   }
 
   .about-container h1 {
-    font-size: 32px;
-    line-height: 9px;
-    text-align: center;
-    text-transform: capitalize;
-    margin-bottom: 16px;
+    font-size:32px;
+    line-height:9px;
+    text-align:center;
+    text-transform:capitalize;
+    margin-bottom:16px;
   }
 
   .about-container p {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: center;
+    font-size:16px;
+    font-weight:400;
+    line-height:20px;
+    text-align:center;
+    margin-top:32px;
   }
 
   .box-1 h1 {
